--- a/style2.css
+++ b/style2.css
@@ -149,7 +149,7 @@ color: #3f3534;
         /* The loading Class */
         .loading {
             position: relative;
-            background-color: #e2e2e2;
+            background-color: #d2612a;
         }
        
         /* The moving element */
