--- a/style2.css
+++ b/style2.css
@@ -149,28 +149,11 @@ color: #3f3534;
         /* The loading Class */
         .loading {
             position: relative;
-            opacity: 0.5;
+         
+           background: #3f3534
         }
        
-        /* The moving element */
-        .loading::after {
-            display: block;
-            content: "";
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            transform: translateX(-100%);
-            background: -webkit-gradient(linear, left top,
-                        right top, from(transparent), 
-                        color-stop(rgba(255, 255, 255, 0.2)),
-                        to(transparent));
-                          
-            background: linear-gradient(90deg, transparent,
-                    rgba(255, 255, 255, 0.2), transparent);
-       
-            /* Adding animation */
-            animation: loading 0.8s infinite;
-        }
+   
        
         /* Loading Animation */
         @keyframes loading {
