--- a/style2.css
+++ b/style2.css
@@ -108,32 +108,75 @@ color: #3f3534;
 }
 
 
+      /* Card styles */
 
-.placeholder-item {
-    box-shadow: 0 4px 10px 0 rgba(33, 33, 33, 0.15);
-    border-radius: 4px;
-    height: 200px;
-    position: relative;
-    overflow: hidden;
-}
-
-.placeholder-item::before {
-    content: '';
-    display: block;
-    position: absolute;
-    left: -150px;
-    top: 0;
-    height: 100%;
-    width: 150px;
-    background: linear-gradient(to right, transparent 0%, #E8E8E8 50%, transparent 100%);
-    animation: load 1s cubic-bezier(0.4, 0.0, 0.2, 1) infinite;
-}
-
-@keyframes load {
-    from {
-        left: -150px;
-    }
-    to   {
-        left: 100%;
-    }
-}
+       
+        /* Card image loading */
+        .card__image img {
+            width: 100%;
+            height: 100%;
+        }
+          
+        .card__image.loading {
+            height: 300px;
+            width: 400px;
+        }
+       
+        /* Card title */
+        .card__title {
+            padding: 8px;
+            font-size: 22px;
+            font-weight: 700;
+        }
+          
+        .card__title.loading {
+            height: 1rem;
+            width: 50%;
+            margin: 1rem;
+            border-radius: 3px;
+        }
+       
+        /* Card description */
+        .card__description {
+            padding: 8px;
+            font-size: 16px;
+        }
+          
+        .card__description.loading {
+            height: 3rem;
+            margin: 1rem;
+            border-radius: 3px;
+        }
+       
+        /* The loading Class */
+        .loading {
+            position: relative;
+            background-color: #e2e2e2;
+        }
+       
+        /* The moving element */
+        .loading::after {
+            display: block;
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            transform: translateX(-100%);
+            background: -webkit-gradient(linear, left top,
+                        right top, from(transparent), 
+                        color-stop(rgba(255, 255, 255, 0.2)),
+                        to(transparent));
+                          
+            background: linear-gradient(90deg, transparent,
+                    rgba(255, 255, 255, 0.2), transparent);
+       
+            /* Adding animation */
+            animation: loading 0.8s infinite;
+        }
+       
+        /* Loading Animation */
+        @keyframes loading {
+            100% {
+                transform: translateX(100%);
+            }
+        }
