--- a/style2.css
+++ b/style2.css
@@ -52,7 +52,8 @@ overflow-x: hidden;
   background-color: white;
   color: #3f3534;
   font-size: 10px;
-  padding: 1px;
+padding-top: 1px;
+padding-bottom: 1px;
   border: none;
   border-radius: 60px;
   border-width: 0px;
